# email_marketing_dashboard_production

./: .env.example  .gitignore  .htaccess  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STEPS.md  INDEX.md  PLAN_SUMMARY.md  QUICK_REFERENCE.md  README.md  START_HERE.md  VISUAL_OVERVIEW.md  add_mock_data.py  add_payment_methods.py  api_documentation_postman.md  authorized_keys  project_architecture.md  pyproject.toml  remove_old_accounts.py  render.yaml  requirements.txt  scratch_benchmark.py  scratch_form.py  vercel.json
app/: auth.py  cache.py  config.py  currency_converter.py  database.py  main.py  schemas.py
app/api/: router.py  routes.py
docs/: API_DOCUMENTATION.md  API_Endpoints_and_URLs.docx  DATABASE_DOCUMENTATION.md  Database_Documentation.docx  PROJECT_ARCHITECTURE.md  Project_Architecture.docx  README.md  curl_examples_unified_api.md  database_details.txt  login_system_documentation.txt
